2022元旦更新 修复了随机尺寸的问题 加入了帮助页

--- a/BW_Mobile/BW_Mobile/ChooseMode.xaml
+++ b/BW_Mobile/BW_Mobile/ChooseMode.xaml
@@ -6,9 +6,9 @@
     <ContentPage.Content>
         <StackLayout x:Name="mainStack">
         <ScrollView HorizontalOptions="FillAndExpand">
-             <StackLayout x:Name="select" Padding="20" RadioButtonGroup.GroupName="gamemode">
+                <StackLayout x:Name="select" Padding="20" RadioButtonGroup.GroupName="gamemode">
                     <RadioButton GroupName="gamemode" CheckedChanged="RadioButton_CheckedChanged" Value="standard" Content="标准模式"></RadioButton>
-                    <RadioButton GroupName="gamemode" CheckedChanged="RadioButton_CheckedChanged" Value="perfect" Content="最优解"></RadioButton>
+                    <RadioButton GroupName="gamemode" CheckedChanged="RadioButton_CheckedChanged" Value="perfect" Content="最优解" IsEnabled="False"></RadioButton>
                 </StackLayout>
         </ScrollView>
         <Frame x:Name="info" BackgroundColor="#2196F3" Padding="24" CornerRadius="0" WidthRequest="152">
