--- a/BW_Mobile/BW_Mobile/DevelopersPage.xaml
+++ b/BW_Mobile/BW_Mobile/DevelopersPage.xaml
@@ -16,9 +16,11 @@
                 <Label FontSize="Large" HorizontalOptions="Center">美术</Label>
                 <Label FontSize="Medium" HorizontalOptions="Center">李子晗</Label>
                 <Label></Label>
-                <Label FontSize="Large" HorizontalOptions="Center">兼容性测试</Label>
+                <Label FontSize="Large" HorizontalOptions="Center">测试</Label>
                 <Label FontSize="Medium" HorizontalOptions="Center">李子晗</Label>
+                <Label FontSize="Small" HorizontalOptions="Center">(Windows10 PC,Android/HarmonyOS Phone)</Label>
                 <Label FontSize="Medium" HorizontalOptions="Center">王梓欣</Label>
+                <Label FontSize="Small" HorizontalOptions="Center">(HarmonyOS Tablet)</Label>
         
             </StackLayout>
         </ScrollView>
