--- a/BW_Mobile/BW_Mobile/DebugPage.xaml
+++ b/BW_Mobile/BW_Mobile/DebugPage.xaml
@@ -21,7 +21,11 @@
                 <Label FontSize="Subtitle" x:Name="landspaceMode" IsVisible="false">横屏模式</Label>
                 <Label x:Name="dependOnDevice" IsVisible="false">由你的设备决定</Label>
                 <Label x:Name="onAndOff" IsVisible="false">若要关闭,可以尝试打开再关闭</Label>
-                <Switch x:Name="landspace" IsVisible="false" Toggled="landspace_Toggled"></Switch>
+                <Switch x:Name="tlandspace" IsVisible="false" Toggled="landspace_Toggled"></Switch>
+                <StackLayout x:Name="butsLandspace" Orientation="Horizontal">
+                    <Button x:Name="bLandspace" IsVisible="false" Text="横屏" Clicked="bLandspace_Clicked"></Button>
+                    <Button x:Name="bPortrait" IsVisible="false" Text="竖屏" Clicked="bPortrait_Clicked"></Button>
+                </StackLayout>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
