--- a/BW_Mobile/BW_Mobile/GamePage.xaml
+++ b/BW_Mobile/BW_Mobile/GamePage.xaml
@@ -11,9 +11,9 @@
                 </StackLayout>
             </Frame>
             </ScrollView>
-            <Label x:Name="sizeWarn" FontSize="Large" IsVisible="false">你的屏幕/窗口暂时不支持现在的游戏尺寸</Label>
-            <AbsoluteLayout>
-                <Grid x:Name="gameArea" BackgroundColor="Black" IsVisible="false">
+            <Label x:Name="sizeWarn" FontSize="Large" IsVisible="false">你的屏幕/窗口太小了</Label>
+            <AbsoluteLayout x:Name="gameLayout">
+                <Grid x:Name="gameArea" BackgroundColor="Black">
                     <Grid.Padding>5</Grid.Padding>
                     <Grid.RowSpacing>5</Grid.RowSpacing>
                     <Grid.ColumnSpacing>5</Grid.ColumnSpacing>
