--- a/BW_Mobile/BW_Mobile/SettingsPage.xaml
+++ b/BW_Mobile/BW_Mobile/SettingsPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BW_Mobile.SettingsPage"
-             Title="设置">
+             Title="设置"
+             Disappearing="ContentPage_Disappearing">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="20">
@@ -11,11 +12,15 @@
                 <Label HorizontalOptions="Center" FontSize="Large" x:Name="paltform"></Label>
 
                 <Label></Label>
-                <Label HorizontalOptions="Center">暂无设置项</Label>
-                <Label></Label>
-                
+                <StackLayout Orientation="Horizontal">
+                    <Label FontSize="Medium">测试模式</Label>
+                    <Switch x:Name="swTestMode" Toggled="swTestMode_Toggled"></Switch>
+                </StackLayout>
+                <Label x:Name="emptyLab" IsVisible="true"></Label>
+                <Label x:Name="saveInfo" TextColor="Red" IsVisible="false" HorizontalOptions="Center">有未保存的更改</Label>
+                <Button Text="保存更改" x:Name="save" Clicked="save_Clicked"></Button>
                 <Button Text="制作人员名单" x:Name="developers" Clicked="developers_Clicked"></Button>
-                <Button Text="开源许可证" x:Name="licence" Clicked="licence_Clicked"></Button>
+                <Button Text="开放源代码许可" x:Name="licence" Clicked="licence_Clicked"></Button>
                 <Label x:Name="releaseDate" FontSize="Medium" HorizontalTextAlignment="Center" VerticalOptions="End"></Label>
             </StackLayout>
         </ScrollView>
