--- a/BW_Mobile/BW_Mobile/DebugPage.xaml
+++ b/BW_Mobile/BW_Mobile/DebugPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resources="clr-namespace:BW_Mobile.Properties"
              x:Class="BW_Mobile.DebugPage"
              Title="调试信息">
     <ContentPage.Content>
@@ -15,18 +16,13 @@
                 <Label FontSize="Subtitle">设备类型</Label>
                 <Label x:Name="idiom"></Label>
                 <Label></Label>
+                <Label FontSize="Subtitle">语言</Label>
+                <Label x:Name="langResources"></Label>
+                <Label x:Name="langCurrent"></Label>
+                <Label x:Name="langCurrentUI"></Label>
+                <Label></Label>
                 <Label FontSize="Subtitle">屏幕尺寸</Label>
                 <Label x:Name="size"></Label>
-                <Label></Label>
-                <Label FontSize="Subtitle" x:Name="landspaceMode" IsVisible="false">横屏模式</Label>
-                <Label x:Name="dependOnDevice" IsVisible="false">由你的设备决定</Label>
-                <Label x:Name="onAndOff" IsVisible="false">若要关闭,可以尝试打开再关闭</Label>
-                <Switch x:Name="tlandspace" IsVisible="false" Toggled="landspace_Toggled"></Switch>
-                <StackLayout x:Name="butsLandspace" Orientation="Horizontal" IsVisible="false">
-                    <Button x:Name="bLandspace" Text="横屏" Clicked="bLandspace_Clicked"></Button>
-                    <Button x:Name="bPortrait" Text="竖屏" Clicked="bPortrait_Clicked"></Button>
-                    <Button x:Name="bUser" Text="自动" Clicked="bUser_Clicked"></Button>
-                </StackLayout>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
