--- a/BlackWhite.App/BlackWhite.App/Game/Base/GamePage.xaml
+++ b/BlackWhite.App/BlackWhite.App/Game/Base/GamePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:c="clr-namespace:BlackWhite.App"
-             x:Class="BlackWhite.App.GamePage">
+             x:Class="BlackWhite.App.Game.Base.GamePage">
     <ContentPage.Content>
         <StackLayout x:Name="pageStack">
             <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
