--- a/BlackWhite.App/BlackWhite.App/Game/Select/SizePage.xaml
+++ b/BlackWhite.App/BlackWhite.App/Game/Select/SizePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:p="clr-namespace:BlackWhite.App.Properties"
-             x:Class="BlackWhite.App.SizePage">
+             x:Class="BlackWhite.App.Game.Select.SizePage">
     <ContentPage.Content>
         <StackLayout>
             <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
