--- a/BlackWhite.App/BlackWhite.App/Game/Base/GamePage.xaml
+++ b/BlackWhite.App/BlackWhite.App/Game/Base/GamePage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:c="clr-namespace:BlackWhite.App"
+             xmlns:c="clr-namespace:BlackWhite.App.Game.Base"
              x:Class="BlackWhite.App.Game.Base.GamePage">
     <ContentPage.Content>
         <StackLayout x:Name="pageStack">
